# agent-bravo

./: .gitignore  README.md  SPEC.md  crew.py  main.py  pyproject.toml
src/agent_bravo/: crew.py  main.py  utils.py
src/agent_bravo/config/: agents.yaml  tasks.yaml
src/agent_bravo/models/: gov_decision.py
tests/: test_gov_decision.py
