[tool.poetry]
name = "agent_bravo"
version = "0.1.0"
description = "agent-bravo using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.55.2,<1.0.0" }


[tool.poetry.scripts]
agent_bravo = "agent_bravo.main:run"
run_crew = "agent_bravo.main:run"
train = "agent_bravo.main:train"
replay = "agent_bravo.main:replay"
test = "agent_bravo.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
