[project]
name = "agent-bravo"
version = "0.1.0"
description = "👎 Ehhh, not buyin' it... A framework for AI Agents to govern in GovernorBravo systems."
authors = [
    { name = "Michael Ghen", email = "mike@mikeghen.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.55.2,<1.0.0",
]

[project.scripts]
agent_bravo = "agent_bravo.main:run"
run_crew = "agent_bravo.main:run"
train = "agent_bravo.main:train"
replay = "agent_bravo.main:replay"
test = "agent_bravo.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
